k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-perform-api
spec:
  selector:
    app: grade-perform-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
